[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/towers/medievalStructure_12.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://source/scripts/Parent_Turret.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Parent_Turret" type="StaticBody2D" groups=[
"Buildings",
]]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 2 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Turret" type="Node2D" parent="."]

[node name="Muzzle" type="Sprite" parent="Turret"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.5, 0.2 )
texture = ExtResource( 2 )
centered = false

[node name="Position2D" type="Position2D" parent="Turret"]

[node name="Detect_Radius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_Radius"]
shape = SubResource( 1 )
[connection signal="body_entered" from="Detect_Radius" to="." method="_on_Detect_Radius_body_entered"]
[connection signal="body_exited" from="Detect_Radius" to="." method="_on_Detect_Radius_body_exited"]
